@@ -36,6 +36,8 @@ Bugs fixed
 - Bug 2893 - lte: GetPgw in helper should be const
 - Bug 3027 - lte: S1 signalling is done before RRC connection establishment is finished
 - #11 - mobility: Rectangle::GetClosestSide returns the correct side also for positions outside the rectangle
+- #53 - Token Bank Fair Queue Scheduler is creating a transmit opportunity of 0 bytes
+- #54 - RadioBearerStats are not correctly connected
 
 Known issues
 ------------
